test/sh/error/flow/unreachable_in_func.sk
f() {
	return
	x := 1
}
